roco-gen/src/snapshots/roco_gen__tera_ext__tests__can_render_form_field_[form_array!_int].snap
---
source: roco-gen/src/tera_ext.rs
expression: "format!(\"Create form\\n\\n{create_form}\\n\\nEdit Form\\n\\n{edit_form}\")"
---
Create form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">array!</label>
    <button type="button" class="text-xs py-1 px-3 rounded-lg bg-gray-900 text-white add-more" data-group="array!">Add More</button>
    <div id="array!-inputs" class="space-y-2">
    {% if item.array! %}
        {% for val in item.array! %}
            <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-2147483648" max="2147483647" id="array!" name="array!" type="number" value="{{val}}" required custom_type="array" />
        {% endfor -%}
    {%- else -%}
        <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-2147483648" max="2147483647" id="array!" name="array!" type="number" value="" required custom_type="array" />
    {%- endif -%}
    </div>
</div>

Edit Form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">array!</label>
    <button type="button" class="text-xs py-1 px-3 rounded-lg bg-gray-900 text-white add-more" data-group="array!">Add More</button>
    <div id="array!-inputs" class="space-y-2">
    {% if item.array! %}
        {% for val in item.array! %}
            <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-2147483648" max="2147483647" id="array!" name="array!" type="number" value="{{val}}" required custom_type="array" />
        {% endfor -%}
    {%- else -%}
        <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-2147483648" max="2147483647" id="array!" name="array!" type="number" value="{{item.array!}}" required custom_type="array" />
    {%- endif -%}
    </div>
</div>
